syntax = "proto3";

package pb;

option go_package="addsrv/pb";

message SumRequest {
    int64 a = 1;
    int64 b = 2;
}

message SumResponse {
    int64 v = 1;
    string err = 2;
}

message ConcatRequest {
    string a = 1;
    string b = 2;
}

message ConcatResponse {
    string v = 1;
    string err = 2;
}


service Add{
    // Sum 对两个数字求和
    rpc Sum(SumRequest) returns (SumResponse) {}
    // Concat 方法拼接两个字符串
    rpc Concat(ConcatRequest) returns (ConcatResponse) {}
}
